src/objects/CBModelingRuleGroup__c.object
<CustomObject>
    <description>Parent record for several Modeling Rules</description>
    <fields>
        <fullName>CBFolder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CB Folder</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>CBFolder__c.FolderType__c</field>
                <operation>equals</operation>
                <value>Modeling Rule</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CBFolder__c</referenceTo>
        <relationshipLabel>CB Modeling Rule Group Folders</relationshipLabel>
        <relationshipName>CB_MRG_Folders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DeleteOldResults__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If true the special batch for deleting old result data will be created</description>
        <label>Delete Old Results</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StoreDrillDown__c</fullName>
        <defaultValue>true</defaultValue>
        <description>True if DrillDown needed</description>
        <inlineHelpText>True if DrillDown needed</inlineHelpText>
        <label>Store Drill Down</label>
        <type>Checkbox</type>
    </fields>
    <label>CB Modeling Rule Group</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Label__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CB Modeling Rule Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CB Modeling Rule Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ModelingRuleType</fullName>
        <active>true</active>
        <errorConditionFormula>AND(CBFolder__c &lt;&gt; null,NOT(ISPICKVAL(CBFolder__r.FolderType__c, &apos;Modeling Rule&apos;)))</errorConditionFormula>
        <errorDisplayField>CBFolder__c</errorDisplayField>
        <errorMessage>Folder type must be &quot;Modeling Rule&quot;</errorMessage>
    </validationRules>
</CustomObject>